--- a/packages/@react-aria/combobox/docs/useComboBox.mdx
+++ b/packages/@react-aria/combobox/docs/useComboBox.mdx
@@ -176,7 +176,7 @@ function ComboBox(props) {
   return (
     <div style={{display: 'inline-flex', flexDirection: 'column'}}>
       <label {...labelProps}>{props.label}</label>
-      <div style={{position: 'relative', display: 'inline-block'}}>
+      <div>
         <input
           {...inputProps}
           ref={inputRef}
@@ -200,7 +200,7 @@ function ComboBox(props) {
           </span>
         </Button>
         {state.isOpen &&
-          <Popover popoverRef={popoverRef} isOpen={state.isOpen} onClose={state.close}>
+          <Popover state={state} triggerRef={inputRef} popoverRef={popoverRef} placement="bottom start">
             <ListBox
               {...listBoxProps}
               listBoxRef={listBoxRef}
@@ -224,54 +224,46 @@ function ComboBox(props) {
 
 ### Popover
 
-The `Popover` component is used to contain the popup listbox for the ComboBox.
+The `Popover` component is used to contain the popup listbox for the Select.
 It can be shared between many other components, including [Select](useSelect.html),
-[Menu](useMenu.html), [Dialog](useOverlayTrigger.html), and others.
-See [useOverlayTrigger](useOverlayTrigger.html) for more examples of popovers.
+[Menu](useMenu.html), and others.
+See [usePopover](usePopover.html) for more examples of popovers.
 
 <details>
   <summary style={{fontWeight: 'bold'}}><ChevronRight size="S" /> Show code</summary>
 
 ```tsx example export=true render=false
-import {useOverlay, DismissButton} from '@react-aria/overlays';
-import {FocusScope} from '@react-aria/focus';
+import {usePopover, OverlayContainer, DismissButton} from '@react-aria/overlays';
 
 function Popover(props) {
-  let ref = React.useRef();
-  let {
-    popoverRef = ref,
-    isOpen,
-    onClose,
-    children
-  } = props;
-
-  // Handle events that should cause the popup to close,
-  // e.g. blur, clicking outside, or pressing the escape key.
-  let {overlayProps} = useOverlay({
-    isOpen,
-    onClose,
-    shouldCloseOnBlur: true,
-    isDismissable: true
-  }, popoverRef);
-
-  // Add a hidden <DismissButton> component at the end of the popover
-  // to allow screen reader users to dismiss the popup easily.
   return (
-    <FocusScope restoreFocus>
-      <div
-        {...overlayProps}
-        ref={popoverRef}
-        style={{
-          position: "absolute",
-          width: "100%",
-          border: "1px solid gray",
-          background: "lightgray",
-          marginTop: 4
-        }}>
-        {children}
-        <DismissButton onDismiss={onClose} />
-      </div>
-    </FocusScope>
+    <OverlayContainer>
+      <PopoverInner {...props} />
+    </OverlayContainer>
+  );
+}
+
+function PopoverInner({children, state, ...props}) {
+  let ref = React.useRef();
+  let {popoverRef = ref} = props;
+  let {popoverProps} = usePopover({
+    ...props,
+    popoverRef
+  }, state);
+
+  return (
+    <div
+      {...popoverProps}
+      ref={popoverRef}
+      style={{
+        ...popoverProps.style,
+        background: 'var(--page-background)',
+        border: '1px solid gray'
+      }}>
+      <DismissButton onDismiss={state.close} />
+      {children}
+      <DismissButton onDismiss={state.close} />
+    </div>
   );
 }
 ```
@@ -303,8 +295,9 @@ function ListBox(props) {
         margin: 0,
         padding: 0,
         listStyle: "none",
-        maxHeight: "150px",
-        overflow: "auto"
+        maxHeight: 150,
+        overflow: "auto",
+        minWidth: 200
       }}>
       {[...state.collection].map(item => (
         <Option
