--- a/packages/@react-aria/menu/docs/useMenu.mdx
+++ b/packages/@react-aria/menu/docs/useMenu.mdx
@@ -131,7 +131,7 @@ function MenuButton(props) {
   let {menuTriggerProps, menuProps} = useMenuTrigger({}, state, ref);
 
   return (
-    <div style={{position: 'relative', display: 'inline-block'}}>
+    <>
       <Button
         {...menuTriggerProps}
         buttonRef={ref}
@@ -140,13 +140,13 @@ function MenuButton(props) {
         <span aria-hidden="true" style={{paddingLeft: 5}}>▼</span>
       </Button>
       {state.isOpen &&
-        <Popover isOpen={state.isOpen} onClose={state.close}>
+        <Popover state={state} triggerRef={ref} placement="bottom start">
           <Menu
             {...props}
             {...menuProps} />
         </Popover>
       }
-    </div>
+    </>
   );
 }
 ```
@@ -236,52 +236,44 @@ Now we can render a simple menu with actionable items:
 
 The `Popover` component is used to contain the menu.
 It can be shared between many other components, including [ComboBox](useComboBox.html),
-[Select](useSelect.html), [Dialog](useOverlayTrigger.html), and others.
-See [useOverlayTrigger](useOverlayTrigger.html) for more examples of popovers.
+[Select](useSelect.html), and others.
+See [usePopover](usePopover.html) for more examples of popovers.
 
 <details>
   <summary style={{fontWeight: 'bold'}}><ChevronRight size="S" /> Show code</summary>
 
 ```tsx example export=true render=false
-import {DismissButton, useOverlay} from '@react-aria/overlays';
-import {FocusScope} from '@react-aria/focus';
+import {usePopover, OverlayContainer, DismissButton} from '@react-aria/overlays';
 
 function Popover(props) {
-  let ref = React.useRef();
-  let {
-    popoverRef = ref,
-    isOpen,
-    onClose,
-    children
-  } = props;
-
-  // Handle events that should cause the popup to close,
-  // e.g. blur, clicking outside, or pressing the escape key.
-  let {overlayProps} = useOverlay({
-    isOpen,
-    onClose,
-    shouldCloseOnBlur: true,
-    isDismissable: true
-  }, popoverRef);
-
-  // Add a hidden <DismissButton> component at the end of the popover
-  // to allow screen reader users to dismiss the popup easily.
   return (
-    <FocusScope restoreFocus>
-      <div
-        {...overlayProps}
-        ref={popoverRef}
-        style={{
-          position: "absolute",
-          minWidth: "100%",
-          border: "1px solid gray",
-          background: "lightgray",
-          marginTop: 4
-        }}>
-        {children}
-        <DismissButton onDismiss={onClose} />
-      </div>
-    </FocusScope>
+    <OverlayContainer>
+      <PopoverInner {...props} />
+    </OverlayContainer>
+  );
+}
+
+function PopoverInner({children, state, ...props}) {
+  let ref = React.useRef();
+  let {popoverRef = ref} = props;
+  let {popoverProps} = usePopover({
+    ...props,
+    popoverRef
+  }, state);
+
+  return (
+    <div
+      {...popoverProps}
+      ref={popoverRef}
+      style={{
+        ...popoverProps.style,
+        background: 'var(--page-background)',
+        border: '1px solid gray'
+      }}>
+      <DismissButton onDismiss={state.close} />
+      {children}
+      <DismissButton onDismiss={state.close} />
+    </div>
   );
 }
 ```
